methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:2: error: illegal start of simple expression
                                   }{gauche();avance(5);droite()}}
                                   ^MethodsPicture:2: error: ';' expected but '{' found.
                                   }{gauche();avance(5);droite()}}
                                    ^